<resources>
    <string name="app_name">Desenho Sabe</string>
    <string name="app_submane">Definitive Edition</string>
    <string name="app_version" translatable="false">v0.2-alpha</string>

    <!-- Title -->
    <string name="ohmLaw">Ohms Law</string>
    <string name="equivalentResistance">Equivalent Resistance</string>
    <string name="jouleEffect">Joule Effect</string>
    <!-- Descriptions -->
    <string name="resistors2">Up to 2 parallel resistors</string>
    <string name="resistors3">Up to 3 parallel resistors</string>
    <string name="tension">Electric tension</string>
    <string name="current">Electric current</string>
    <string name="resistance">Electrical resistance</string>
    <string name="power">Electric power</string>
    <string name="jouleEffectDescription">Transformation into thermal energy</string>

    <!-- Resources -->
    <string name="calculate">Calculate</string>,
    <string name="share">Share</string>

    <!-- Informations -->
    <string name="info">Info</string>
    <string name="download">Download</string>
    <string name="see_more">See more</string>
    <string name="bug_repport">Bug Report</string>
    <string name="bug_text">The bug was </string>

</resources>
